--- a/contents_board/src/App.css
+++ b/contents_board/src/App.css
@@ -2,4 +2,5 @@
   text-align: center;
 }
  
- .page_wrap{display: flex; justify-content: space-between;}
+ .page_wrap {display: flex; justify-content: space-between; background-color: #efefef; }
+ .page_wrap .contents_wrap{width:85%;background:#efefef; margin-left:15%;}
