--- a/contents_board/src/component/Home.css
+++ b/contents_board/src/component/Home.css
@@ -1,5 +1,5 @@
 .home{}
-
-.home .haedLine h2{text-align: left; padding-top:20px;}
+ 
+.home .haedLine h2{text-align: left; padding:30px 0 10px 0;}
 
 .home .haedLine .contentsList {padding:0;}
