--- a/acount_book/src/component/Add.css
+++ b/acount_book/src/component/Add.css
@@ -13,5 +13,5 @@
 
 .wrap_add .text{ width:80%; text-align: right; margin-top:30px;}
 .wrap_add .text2{ width:100%;  text-align: right;}
-.wrap_add .btn{ display: flex; justify-content: center; gap:10px;} 
+.wrap_add .btn{ display: flex; justify-content: center; gap:10px; margin-top:10px;} 
 .wrap_add .btn button{ }
