--- a/acount_book/src/component/Total.css
+++ b/acount_book/src/component/Total.css
@@ -1,3 +1,3 @@
-.wrap_total{border:1px #eee solid; width:100%;  }
+.wrap_total{border:1px #555 solid; width:100%;  }
 .wrap_total h2 {text-align: center;}
 .wrap_total p {text-align: right; padding:30px 50px 30px 0; font-size: 20px;}
