[ContentsBoard] 메인 레이아웃 디자인 수정
[ContentsBoard] 메인 레이아웃 디자인 수정

--- a/contents_board/src/component/ContentsList.css
+++ b/contents_board/src/component/ContentsList.css
@@ -4,6 +4,6 @@
 .contentsList h1{padding-top:30px;}
 
 .contentsList li a{ height:350px; display: block;  transition:0.5s; }
-.contentsList li a:hover{background:#f4f4f4;}
+/* .contentsList li a:hover{background:#f4f4f4;} */
 .contentsList li a h3{width:100%; background:rgb(180, 10, 10);padding:20px 0; border-radius: 15px 15px 0 0; color:#fff;  }
 .contentsList li a p{padding-top:20px;}
