--- a/contents_board/src/component/Header.css
+++ b/contents_board/src/component/Header.css
@@ -1,1 +1,7 @@
-.header{padding:50px 0; background:#fff; border-bottom:rgb(180, 10, 10) solid 3px;}
+.header{padding:50px 100px; background:#fff; border-bottom:rgb(180, 10, 10) solid 3px; background-image: url(../assets/header_visual.jpg); background-size: cover; background-repeat: no-repeat; position: relative; }
+ 
+.header h1{text-align: left;}
+.header h1 a{color:#fff; font-size:42px;  }
+.header ul{display: flex; gap:15px; position:absolute; bottom:20px; right:100px;}
+.header ul li a{ color:#fff; font-size: 18px;}
+
