--- a/contents_board/src/component/SideBar.css
+++ b/contents_board/src/component/SideBar.css
@@ -1,4 +1,8 @@
 
-.sidebar{  width:10%; background:rgb(180, 10, 10);  height:500px; position:fixed; top:180px; left:30px; border-radius: 10px 10px 0px 10px; box-shadow: 8px 8px 8px rgba(0,0,0,0.3); overflow: hidden; }
+.sidebar{      position:fixed; top:215px; left:30px; border-radius: 10px 10px 0px 10px;   }
 
-.sidebar li a{border-bottom:1px solid #eee; display: block; width:100%; padding:20px 0; color:#fff;}
+ 
+.sidebar li{ background:rgb(180, 10, 10); border-radius: 50%; }
+.sidebar li a{  margin-bottom:30px; display: block; width:180px; height:180px;display: flex; align-items: center; justify-content: center;  color:#fff; font-size: 28px; border-radius: 50%; box-shadow: 8px 8px 8px rgba(0,0,0,0.3); font-weight: bold;  }
+.sidebar li:first-child{background:#fff; }
+.sidebar li:first-child a{ color:rgb(180, 10, 10); border:6px rgb(180, 10, 10) solid; box-sizing: border-box;}
